--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_swiper: ^1.1.6
   like_button: ^2.0.3
+  pandabar: ^0.1.2
 
 dev_dependencies:
   flutter_test:
